--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "82e41906",
+   "id": "bf5cff6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f499cebb",
+   "id": "999cdc7b",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a463551e",
+   "id": "19b4ce27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b46da55e",
+   "id": "746e6326",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f1d7aa52",
+   "id": "a6409128",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fa4f8009",
+   "id": "af7dc802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7314243e",
+   "id": "f8c19d3e",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4d26b51a",
+   "id": "9088238b",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1db09e32",
+   "id": "3be8b707",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4d1ee0a3",
+   "id": "1baa76d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "847127b5",
+   "id": "a95f4c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a23c461a",
+   "id": "f2b21ce7",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "86b923db",
+   "id": "0bde4926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8772c33d",
+   "id": "c19ebd94",
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +249,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "917130cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/gapminder_gdp_asia.csv', index_col=0)\n",
+    "japan = df.loc['Japan']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "265361e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gdpPercap_1952     3216.956347\n",
+       "gdpPercap_1957     4317.694365\n",
+       "gdpPercap_1962     6576.649461\n",
+       "gdpPercap_1967     9847.788607\n",
+       "gdpPercap_1972    14778.786360\n",
+       "gdpPercap_1977    16610.377010\n",
+       "gdpPercap_1982    19384.105710\n",
+       "gdpPercap_1987    22375.941890\n",
+       "gdpPercap_1992    26824.895110\n",
+       "gdpPercap_1997    28816.584990\n",
+       "gdpPercap_2002    28604.591900\n",
+       "gdpPercap_2007    31656.068060\n",
+       "Name: Japan, dtype: float64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "japan"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fef6f3d7",
+   "id": "8a411d15",
    "metadata": {},
    "outputs": [],
    "source": []
